--- a/index.html
+++ b/index.html
@@ -104,10 +104,12 @@
           href="tel:+7(383)230-56-76"
           >+7(383)230-56-76</a
         >
+        <a href="https://t.me/your_telegram" target="_blank">
+          <div class="header_icon_wrap max-[768px]:hidden!">
+            <img src="./assets/icons/telegram.svg" alt="phone" />
+          </div>
+        </a>
 
-        <div class="header_icon_wrap max-[768px]:hidden!">
-          <img src="./assets/icons/phone.svg" alt="phone" />
-        </div>
         <button
           class="bg-[#C83A36] h-12 w-41.5 rounded-xl text-white font-medium max-[768px]:hidden!"
         >
@@ -393,16 +395,18 @@
             Спецтарифы на междугородние перевозки:<br />
             Самара, Екатеринбург — дешевле на 20%.
           </p>
-          <button
-            class="w-76.5 h-19 max-[1440px]:h-13 max-[1024px]:h-19 max-[768px]:h-12 max-[768px]:w-55 max-[1440px]:w-60 max-[1440px]:text-base rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
-          >
-            Начать сотрудничество
-            <img
-              src="./assets/icons/chevron.svg"
-              alt="chevron"
-              class="-rotate-90"
-            />
-          </button>
+          <a href="#form">
+            <button
+              class="w-76.5 h-19 max-[1440px]:h-13 max-[1024px]:h-19 max-[768px]:h-12 max-[768px]:w-55 max-[1440px]:w-60 max-[1440px]:text-base rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+            >
+              Начать сотрудничество
+              <img
+                src="./assets/icons/chevron.svg"
+                alt="chevron"
+                class="-rotate-90"
+              />
+            </button>
+          </a>
         </div>
         <div
           class="w-[722px] max-[1920px]:max-h-[85%] max-[1440px]:max-h-[auto] overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
@@ -778,7 +782,9 @@
           <div
             class="flex gap-3 mb-3 max-[1440px]:gap-2 max-[1024px]:mb-2 shrink-0"
           >
-            <div class="about_company_wrap radius_left">
+            <div
+              class="about_company_wrap radius_left max-[1025px]:pr-4! max-[1024px]:pr-0!"
+            >
               <div class="about_icon_wrap">
                 <img
                   src="./assets/icons/check.svg"
@@ -786,12 +792,20 @@
                   class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                 />
               </div>
-              <p class="about_title">3000+</p>
-              <p class="about_info min-[1919px]:max-w-[200px]">
+              <p
+                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+              >
+                3000+
+              </p>
+              <p
+                class="about_info max-[1025px]:text-[12px]! min-[1919px]:max-w-[200px]"
+              >
                 Заказов выполняем ежемесячно
               </p>
             </div>
-            <div class="about_company_wrap radius_right">
+            <div
+              class="about_company_wrap radius_right max-[1025px]:pr-4! max-[1024px]:pr-0!"
+            >
               <div class="about_icon_wrap">
                 <img
                   src="./assets/icons/location.svg"
@@ -799,14 +813,20 @@
                   class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                 />
               </div>
-              <p class="about_title">1700+</p>
+              <p
+                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+              >
+                1700+
+              </p>
               <p class="about_info">
                 Городов охватывает наша география перевозок
               </p>
             </div>
           </div>
           <div class="flex gap-3 max-[1024px]:gap-2">
-            <div class="about_company_wrap radius_left">
+            <div
+              class="about_company_wrap radius_left max-[1025px]:pr-4! max-[1024px]:pr-0!"
+            >
               <div class="about_icon_wrap">
                 <img
                   src="./assets/icons/rubl.svg"
@@ -814,12 +834,18 @@
                   class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                 />
               </div>
-              <p class="about_title">15 млн ₽</p>
+              <p
+                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+              >
+                15 млн ₽
+              </p>
               <p class="about_info min-[1919px]:whitespace-nowrap">
                 Страховое покрытие ответсвенности
               </p>
             </div>
-            <div class="about_company_wrap radius_right">
+            <div
+              class="about_company_wrap radius_right max-[1025px]:pr-4! max-[1024px]:pr-0!"
+            >
               <div class="about_icon_wrap">
                 <img
                   src="./assets/icons/clock.svg"
@@ -827,7 +853,11 @@
                   class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                 />
               </div>
-              <p class="about_title">17+ лет</p>
+              <p
+                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+              >
+                17+ лет
+              </p>
               <p class="about_info">на рынке грузоперевозок</p>
             </div>
           </div>
@@ -863,7 +893,7 @@
           <img
             src="./assets/images/about_company.png"
             alt="about"
-            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1441px]:w-125.5 max-[1441px]:h-110 max-[768px]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
+            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1441px]:w-125.5 max-[1441px]:h-110 max-[1025px]:mt-11 max-[768px]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
           />
         </div>
       </section>
@@ -1290,6 +1320,7 @@
         </div>
       </section>
       <section
+        id="form"
         class="rounded-[56px] max-[768px]:mb-16 max-[768px]:px-4 max-[1024px]:rounded-3xl max-[768px]:gap-6 max-[768px]:flex-col bg-[#3A3A3A] contact_section px-15 py-40 flex justify-between mb-30 max-[1440px]:mb-20 max-[1440px]:p-10"
       >
         <div class="flex flex-col justify-between z-10 max-[768px]:gap-4">
@@ -1362,7 +1393,7 @@
           <div
             class="bg-[#F2F5F7] p-12 radius_left max-[1024px]:p-6 max-[768px]:p-4 max-[768px]:w-72 max-[768px]:shrink-0"
           >
-            <div class="flex justify-between mb-14 max-[1024px]:mb-10">
+            <div class="flex justify-between mb-14 max-[1025px]:mb-10">
               <div>
                 <p
                   class="space3 text-[2rem] font-medium leading-10 text-[#3A3A3A] mb-2 max-[1024px]:text-2xl max-[768px]:text-lg max-[768px]:leading-6 max-[1024px]:leading-7"
@@ -1370,17 +1401,17 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
               </div>
               <img
                 src="./assets/icons/kovichka.svg"
-                class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
+                class="max-[1025px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1391,7 +1422,7 @@
           <div
             class="bg-[#F2F5F7] p-12 radius_full radius_comment_right max-[1024px]:p-6 max-[768px]:w-72 max-[768px]:shrink-0"
           >
-            <div class="flex justify-between mb-14 max-[1024px]:mb-10">
+            <div class="flex justify-between mb-14 max-[1025px]:mb-10">
               <div>
                 <p
                   class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-lg max-[768px]:leading-6 text-[#3A3A3A] mb-2 max-[1024px]:text-2xl max-[1024px]:leading-7"
@@ -1399,17 +1430,17 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
               </div>
               <img
                 src="./assets/icons/kovichka.svg"
-                class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
+                class="max-[1025px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1420,7 +1451,7 @@
           <div
             class="bg-[#F2F5F7] p-12 radius_right radius_comment_left max-[1024px]:p-6 max-[768px]:w-72 max-[768px]:shrink-0"
           >
-            <div class="flex justify-between mb-14 max-[1024px]:mb-10">
+            <div class="flex justify-between mb-14 max-[1025px]:mb-10">
               <div>
                 <p
                   class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-lg max-[768px]:leading-6 text-[#3A3A3A] mb-2 max-[1024px]:text-2xl max-[1024px]:leading-7"
@@ -1428,17 +1459,17 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
               </div>
               <img
                 src="./assets/icons/kovichka.svg"
-                class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
+                class="max-[1025px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1449,7 +1480,7 @@
           <div
             class="bg-[#F2F5F7] p-12 radius_left radius_comment_right max-[1024px]:p-6 max-[768px]:w-72 max-[768px]:shrink-0"
           >
-            <div class="flex justify-between mb-14 max-[1024px]:mb-10">
+            <div class="flex justify-between mb-14 max-[1025px]:mb-10">
               <div>
                 <p
                   class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-lg max-[768px]:leading-6 text-[#3A3A3A] mb-2 max-[1024px]:text-2xl max-[1024px]:leading-7"
@@ -1457,17 +1488,17 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
               </div>
               <img
                 src="./assets/icons/kovichka.svg"
-                class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
+                class="max-[1025px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1478,7 +1509,7 @@
           <div
             class="bg-[#F2F5F7] p-12 radius_full radius_comment_left max-[1024px]:p-6 max-[768px]:w-72 max-[768px]:shrink-0"
           >
-            <div class="flex justify-between mb-14 max-[1024px]:mb-10">
+            <div class="flex justify-between mb-14 max-[1025px]:mb-10">
               <div>
                 <p
                   class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-lg max-[768px]:leading-6 text-[#3A3A3A] mb-2 max-[1024px]:text-2xl max-[1024px]:leading-7"
@@ -1486,17 +1517,17 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
               </div>
               <img
                 src="./assets/icons/kovichka.svg"
-                class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
+                class="max-[1025px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1507,7 +1538,7 @@
           <div
             class="bg-[#F2F5F7] p-12 radius_right max-[1024px]:p-6 max-[768px]:w-72 max-[768px]:shrink-0"
           >
-            <div class="flex justify-between mb-14 max-[1024px]:mb-10">
+            <div class="flex justify-between mb-14 max-[1025px]:mb-10">
               <div>
                 <p
                   class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-lg max-[768px]:leading-6 text-[#3A3A3A] mb-2 max-[1024px]:text-2xl max-[1024px]:leading-7"
@@ -1515,17 +1546,17 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
               </div>
               <img
                 src="./assets/icons/kovichka.svg"
-                class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
+                class="max-[1025px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1554,7 +1585,11 @@
           <div
             class="max-[1024px]:flex justify-between items-center max-[768px]:flex-col max-[768px]:items-start max-[768px]:gap-4"
           >
-            <h2 class="title mb-8 max-[1024px]:mb-0">Наши партнеры</h2>
+            <h2
+              class="title mb-8 max-[1024px]:mb-0 max-[1025px]:text-5xl! max-[1024px]:text-[2rem]!"
+            >
+              Наши партнеры
+            </h2>
             <p
               class="text-xl max-w-90 text-[#3A3A3A] max-[1440px]:text-base max-[1024px]:text-sm"
             >
@@ -2049,7 +2084,7 @@
             </ul>
           </div>
           <p
-            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[768px]:hidden"
+            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[1025px]:hidden"
           >
             © 2025, ООО АТЭК «Грузовые линии»
           </p>
