--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -202,9 +202,11 @@
               >
                 Заказать звонок
               </button>
-              <div class="header_icon_wrap w-10! h-10!">
-                <img src="../assets/icons/phone.svg" alt="phone" />
-              </div>
+              <a href="https://t.me/your_telegram" target="_blank">
+                <div class="header_icon_wrap w-10! h-10!">
+                  <img src="../assets/icons/telegram.svg" alt="phone" />
+                </div>
+              </a>
             </div>
             <a
               class="header_title text-lg! hidden max-[768px]:block mt-5"
@@ -749,7 +751,7 @@
         </div>
       </div>
       <section
-        class="px-15 max-[1440px]:px-10 max-[768px]:px-4 mb-40 max-[1440px]:mb-20 max-[768px]:mb-16"
+        class="px-15 max-[1440px]:px-10 max-[768px]:px-4 max-[1024px]:px-5 mb-40 max-[1440px]:mb-20 max-[768px]:mb-16"
       >
         <h2 class="title mb-14 max-[1440px]:mb-10 max-[768px]:mb-6">
           Наш автопарк
@@ -850,7 +852,7 @@
         </div>
         <div class="flex gap-3 overflow-auto max-[1440px]:gap-2">
           <div
-            class="bg-[#E8EBED] truck-card active radius_left py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] max-[1440px]:w-[186px] max-[768px]:w-[140px] flex flex-col items-center gap-16.5 max-[1440px]:gap-7 max-[1024px]:gap-5"
+            class="bg-[#E8EBED] truck-card active radius_left py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] max-[1440px]:w-[186px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура “Тент” 10 тонн"
             data-img="../assets/images/tent.png"
             data-length="13.6 м"
@@ -870,7 +872,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[768px]:w-[140px] flex flex-col items-center gap-16.5 max-[1440px]:gap-7 max-[1024px]:gap-5"
+            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="13.2 м"
@@ -890,28 +892,8 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[768px]:w-[140px] flex flex-col items-center gap-16.5 max-[1440px]:gap-7 max-[1024px]:gap-5"
-            data-title=" Фура “Термос” 10 тонн"
-            data-img="../assets/images/termos.png"
-            data-length="15.2 м"
-            data-volume="92 м3"
-            data-weight="12 т"
-            data-price="2500"
-          >
-            <img
-              src="../assets/images/termos.png"
-              alt="ref"
-              class="max-[1440px]:w-34.5 max-[1024px]:w-28.25"
-            />
-            <p
-              class="text-[#3A3A3A99] text-[1.75rem] space3 font-medium max-[1440px]:text-base max-[1024px]:text-xs"
-            >
-              Фура “Термос” 10 тонн
-            </p>
-          </div>
-          <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[768px]:w-[140px] flex flex-col items-center gap-16.5 max-[1440px]:gap-7 max-[1024px]:gap-5"
-            data-title=" Фура “Термос” 10 тонн"
+            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            data-title=" Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="15.2 м"
             data-volume="92 м3"
@@ -926,12 +908,32 @@
             <p
               class="text-[#3A3A3A99] text-[1.75rem] space3 font-medium max-[1440px]:text-base max-[1024px]:text-xs"
             >
-              Фура “Термос” 10 тонн
+              Фура “Реф” 10 тонн
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_right py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[768px]:w-[140px] flex flex-col items-center gap-16.5 max-[1440px]:gap-7 max-[1024px]:gap-5"
-            data-title="Фура “Борт” 10 тонн"
+            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            data-title=" Фура “Реф” 10 тонн"
+            data-img="../assets/images/ref.png"
+            data-length="15.2 м"
+            data-volume="92 м3"
+            data-weight="12 т"
+            data-price="2500"
+          >
+            <img
+              src="../assets/images/termos.png"
+              alt="ref"
+              class="max-[1440px]:w-34.5 max-[1024px]:w-28.25"
+            />
+            <p
+              class="text-[#3A3A3A99] text-[1.75rem] space3 font-medium max-[1440px]:text-base max-[1024px]:text-xs"
+            >
+              Фура “Реф” 10 тонн
+            </p>
+          </div>
+          <div
+            class="bg-[#F2F5F7] truck-card radius_right py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            data-title="Фура Реф 10 тонн"
             data-img="../assets/images/bort.png"
             data-length="12.2 м"
             data-volume="72 м3"
@@ -946,13 +948,13 @@
             <p
               class="text-[#3A3A3A99] text-[1.75rem] space3 font-medium max-[1440px]:text-base max-[1024px]:text-xs"
             >
-              Фура “Борт” 10 тонн
+              Фура Реф 10 тонн
             </p>
           </div>
         </div>
       </section>
       <section
-        class="flex gap-10 max-[1440px]:gap-5 mb-23 pl-15 max-[1440px]:pl-10 relative max-[1440px]:mb-20 max-[768px]:mb-16 max-[1024px]:pl-5 max-[1024px]:gap-2 max-[768px]:px-4 max-[768px]:flex-col"
+        class="flex gap-10 max-[1440px]:gap-5 mb-23 pl-15 max-[1440px]:pl-10 relative max-[1440px]:mb-20 max-[768px]:mb-16 max-[1024px]:pl-10 max-[1024px]:gap-2 max-[768px]:px-4 max-[768px]:flex-col"
       >
         <div class="flex-1 flex flex-col justify-between">
           <div
@@ -973,56 +975,82 @@
             <div
               class="flex gap-3 mb-3 max-[1440px]:gap-2 max-[1024px]:mb-2 shrink-0"
             >
-              <div class="about_company_wrap radius_left">
+              <div
+                class="about_company_wrap radius_left max-[1025px]:pr-4! max-[1024px]:pr-0!"
+              >
                 <div class="about_icon_wrap">
                   <img
-                    src="../assets/icons/check.svg"
+                    src="./assets/icons/check.svg"
                     alt="check"
                     class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                   />
                 </div>
-                <p class="about_title">3000+</p>
-                <p class="about_info min-[1919px]:max-w-[200px]">
+                <p
+                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                >
+                  3000+
+                </p>
+                <p
+                  class="about_info max-[1025px]:text-[12px]! min-[1919px]:max-w-[200px]"
+                >
                   Заказов выполняем ежемесячно
                 </p>
               </div>
-              <div class="about_company_wrap radius_right">
+              <div
+                class="about_company_wrap radius_right max-[1025px]:pr-4! max-[1024px]:pr-0!"
+              >
                 <div class="about_icon_wrap">
                   <img
-                    src="../assets/icons/location.svg"
+                    src="./assets/icons/location.svg"
                     alt="check"
                     class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                   />
                 </div>
-                <p class="about_title">1700+</p>
+                <p
+                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                >
+                  1700+
+                </p>
                 <p class="about_info">
                   Городов охватывает наша география перевозок
                 </p>
               </div>
             </div>
             <div class="flex gap-3 max-[1024px]:gap-2">
-              <div class="about_company_wrap radius_left">
+              <div
+                class="about_company_wrap radius_left max-[1025px]:pr-4! max-[1024px]:pr-0!"
+              >
                 <div class="about_icon_wrap">
                   <img
-                    src="../assets/icons/rubl.svg"
+                    src="./assets/icons/rubl.svg"
                     alt="check"
                     class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                   />
                 </div>
-                <p class="about_title">15 млн ₽</p>
+                <p
+                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                >
+                  15 млн ₽
+                </p>
                 <p class="about_info min-[1919px]:whitespace-nowrap">
                   Страховое покрытие ответсвенности
                 </p>
               </div>
-              <div class="about_company_wrap radius_right">
+              <div
+                class="about_company_wrap radius_right max-[1025px]:pr-4! max-[1024px]:pr-0!"
+              >
                 <div class="about_icon_wrap">
                   <img
-                    src="../assets/icons/clock.svg"
+                    src="./assets/icons/clock.svg"
                     alt="check"
                     class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                   />
                 </div>
-                <p class="about_title">17+ лет</p>
+                <p
+                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                >
+                  17+ лет
+                </p>
                 <p class="about_info">на рынке грузоперевозок</p>
               </div>
             </div>
@@ -1057,7 +1085,7 @@
           <img
             src="../assets/images/about_company.png"
             alt="about"
-            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1441px]:w-125.5 max-[1441px]:h-110 max-[768px]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
+            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1441px]:w-125.5 max-[1441px]:h-110 max-[1025px]:mt-11 max-[768px]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
           />
         </div>
       </section>
@@ -1362,7 +1390,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -1372,7 +1400,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1391,7 +1419,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -1401,7 +1429,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1420,7 +1448,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -1430,7 +1458,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1449,7 +1477,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -1459,7 +1487,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1478,7 +1506,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -1488,7 +1516,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1507,7 +1535,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -1517,7 +1545,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1938,7 +1966,7 @@
             </ul>
           </div>
           <p
-            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[768px]:hidden"
+            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[1025px]:hidden"
           >
             © 2025, ООО АТЭК «Грузовые линии»
           </p>
