--- a/pages/comments.html
+++ b/pages/comments.html
@@ -194,9 +194,11 @@
               >
                 Заказать звонок
               </button>
-              <div class="header_icon_wrap w-10! h-10!">
-                <img src="../assets/icons/phone.svg" alt="phone" />
-              </div>
+              <a href="https://t.me/your_telegram" target="_blank">
+                <div class="header_icon_wrap w-10! h-10!">
+                  <img src="../assets/icons/telegram.svg" alt="phone" />
+                </div>
+              </a>
             </div>
             <a
               class="header_title text-lg! hidden max-[768px]:block mt-5"
@@ -313,7 +315,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -323,7 +325,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -342,7 +344,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -352,7 +354,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -371,7 +373,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -381,7 +383,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -400,7 +402,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -410,7 +412,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -429,7 +431,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -439,7 +441,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -458,7 +460,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -468,7 +470,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -634,7 +636,7 @@
             </ul>
           </div>
           <p
-            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[768px]:hidden"
+            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[1025px]:hidden"
           >
             © 2025, ООО АТЭК «Грузовые линии»
           </p>
