--- a/pages/news.html
+++ b/pages/news.html
@@ -193,9 +193,11 @@
               >
                 Заказать звонок
               </button>
-              <div class="header_icon_wrap w-10! h-10!">
-                <img src="../assets/icons/phone.svg" alt="phone" />
-              </div>
+              <a href="https://t.me/your_telegram" target="_blank">
+                <div class="header_icon_wrap w-10! h-10!">
+                  <img src="../assets/icons/telegram.svg" alt="phone" />
+                </div>
+              </a>
             </div>
             <a
               class="header_title text-lg! hidden max-[768px]:block mt-5"
@@ -539,7 +541,7 @@
             </ul>
           </div>
           <p
-            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[768px]:hidden"
+            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[1025px]:hidden"
           >
             © 2025, ООО АТЭК «Грузовые линии»
           </p>
