--- a/pages/road_transportation.html
+++ b/pages/road_transportation.html
@@ -195,9 +195,11 @@
               >
                 Заказать звонок
               </button>
-              <div class="header_icon_wrap w-10! h-10!">
-                <img src="../assets/icons/phone.svg" alt="phone" />
-              </div>
+              <a href="https://t.me/your_telegram" target="_blank">
+                <div class="header_icon_wrap w-10! h-10!">
+                  <img src="../assets/icons/telegram.svg" alt="phone" />
+                </div>
+              </a>
             </div>
             <a
               class="header_title text-lg! hidden max-[768px]:block mt-5"
@@ -436,27 +438,7 @@
           </div>
           <div
             class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[768px]:w-[140px] flex flex-col items-center gap-16.5 max-[1440px]:gap-7 max-[1024px]:gap-5"
-            data-title=" Фура “Термос” 10 тонн"
-            data-img="../assets/images/termos.png"
-            data-length="15.2 м"
-            data-volume="92 м3"
-            data-weight="12 т"
-            data-price="2500"
-          >
-            <img
-              src="../assets/images/termos.png"
-              alt="ref"
-              class="max-[1440px]:w-34.5 max-[1024px]:w-28.25"
-            />
-            <p
-              class="text-[#3A3A3A99] text-[1.75rem] space3 font-medium max-[1440px]:text-base max-[1024px]:text-xs"
-            >
-              Фура “Термос” 10 тонн
-            </p>
-          </div>
-          <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[768px]:w-[140px] flex flex-col items-center gap-16.5 max-[1440px]:gap-7 max-[1024px]:gap-5"
-            data-title=" Фура “Термос” 10 тонн"
+            data-title=" Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="15.2 м"
             data-volume="92 м3"
@@ -471,12 +453,32 @@
             <p
               class="text-[#3A3A3A99] text-[1.75rem] space3 font-medium max-[1440px]:text-base max-[1024px]:text-xs"
             >
-              Фура “Термос” 10 тонн
+              Фура “Реф” 10 тонн
+            </p>
+          </div>
+          <div
+            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[768px]:w-[140px] flex flex-col items-center gap-16.5 max-[1440px]:gap-7 max-[1024px]:gap-5"
+            data-title=" Фура “Реф” 10 тонн"
+            data-img="../assets/images/ref.png"
+            data-length="15.2 м"
+            data-volume="92 м3"
+            data-weight="12 т"
+            data-price="2500"
+          >
+            <img
+              src="../assets/images/termos.png"
+              alt="ref"
+              class="max-[1440px]:w-34.5 max-[1024px]:w-28.25"
+            />
+            <p
+              class="text-[#3A3A3A99] text-[1.75rem] space3 font-medium max-[1440px]:text-base max-[1024px]:text-xs"
+            >
+              Фура “Реф” 10 тонн
             </p>
           </div>
           <div
             class="bg-[#F2F5F7] truck-card radius_right py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[768px]:w-[140px] flex flex-col items-center gap-16.5 max-[1440px]:gap-7 max-[1024px]:gap-5"
-            data-title="Фура “Борт” 10 тонн"
+            data-title="Фура Реф 10 тонн"
             data-img="../assets/images/bort.png"
             data-length="12.2 м"
             data-volume="72 м3"
@@ -491,7 +493,7 @@
             <p
               class="text-[#3A3A3A99] text-[1.75rem] space3 font-medium max-[1440px]:text-base max-[1024px]:text-xs"
             >
-              Фура “Борт” 10 тонн
+              Фура Реф 10 тонн
             </p>
           </div>
         </div>
@@ -943,7 +945,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -953,7 +955,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -972,7 +974,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -982,7 +984,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1001,7 +1003,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -1011,7 +1013,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1030,7 +1032,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -1040,7 +1042,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1059,7 +1061,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -1069,7 +1071,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1088,7 +1090,7 @@
                   Мария
                 </p>
                 <p
-                  class="space3 font-medium text-[#3A3A3A] max-[1024px]:text-xs"
+                  class="space3 font-medium text-[#3A3A3A] max-[1025px]:text-xs"
                 >
                   04.07. 2025
                 </p>
@@ -1098,7 +1100,7 @@
                 class="max-[1024px]:w-8 max-[1024px]:h-8 max-[768px]:w-6 max-[768px]:h-6"
               />
             </div>
-            <p class="space3 text-xl text-[#3A3A3A] max-[1024px]:text-xs">
+            <p class="space3 text-xl text-[#3A3A3A] max-[1025px]:text-xs">
               Компания ООО «Транспортное Агентство Подорожник» удовлетворяет
               всем требованиям , касающимся выполнения клиентского сервиса
               интернет-магазина МЕТРО Кэш энд Керри О,а именно: своевременность
@@ -1518,7 +1520,7 @@
             </ul>
           </div>
           <p
-            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[768px]:hidden"
+            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[1025px]:hidden"
           >
             © 2025, ООО АТЭК «Грузовые линии»
           </p>
