--- a/pages/pricelist.html
+++ b/pages/pricelist.html
@@ -194,9 +194,11 @@
               >
                 Заказать звонок
               </button>
-              <div class="header_icon_wrap w-10! h-10!">
-                <img src="../assets/icons/phone.svg" alt="phone" />
-              </div>
+              <a href="https://t.me/your_telegram" target="_blank">
+                <div class="header_icon_wrap w-10! h-10!">
+                  <img src="../assets/icons/telegram.svg" alt="phone" />
+                </div>
+              </a>
             </div>
             <a
               class="header_title text-lg! hidden max-[768px]:block mt-5"
@@ -475,7 +477,7 @@
         </div>
       </section>
       <section
-        class="rounded-[56px] -mb-13 relative z-10 max-[1440px]:rounded-[1.75rem] max-[768px]:rounded-2xl p-15 max-[1440px]:p-10 max-[768px]:px-4 max-[768px]:py-5 bg-[#E4E6E8]"
+        class="rounded-[56px] -mb-13 relative z-10 max-[1440px]:rounded-[1.75rem] max-[768px]:rounded-2xl p-15 max-[1440px]:p-10 max-[1440px]:-mb-5 max-[768px]:px-4 max-[768px]:py-5 max-[768px]:-mb-3 bg-[#E4E6E8]"
       >
         <h2 class="title mb-14 max-[1440px]:mb-10 max-[768px]:mb-6">
           Примечание
@@ -571,7 +573,7 @@
         </div>
       </section>
       <section
-        class="rounded-b-[56px] max-[768px]:mb-16 max-[768px]:px-4 max-[1024px]:rounded-b-3xl max-[768px]:gap-6 max-[768px]:flex-col bg-[#3A3A3A] contact_section px-15 py-40 flex justify-between mb-30 max-[1440px]:mb-20 max-[1440px]:p-10"
+        class="rounded-b-[56px] max-[768px]:mb-16 max-[768px]:px-4 max-[1024px]:rounded-b-3xl max-[768px]:gap-6 max-[768px]:flex-col bg-[#3A3A3A] contact_section px-15 py-40 flex justify-between mb-30 max-[1440px]:mb-20 max-[1440px]:p-10 max-[1440px]:pt-16 max-[1440px]:pb-14 max-[768px]:py-5 max-[768px]:pt-9"
       >
         <div class="flex flex-col justify-between z-10 max-[768px]:gap-4">
           <p
@@ -859,7 +861,7 @@
             </ul>
           </div>
           <p
-            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[768px]:hidden"
+            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[1025px]:hidden"
           >
             © 2025, ООО АТЭК «Грузовые линии»
           </p>
