--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
     <main
       class="page-container max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px]"
     >
-      <div class="my-16 px-4 max-[768px]:block hidden">
+      <div class="mt-16 mb-10 px-4 max-[768px]:block hidden">
         <h2
           class="text-[#3A3A3A] font-medium leading-[100%] space3 mb-4 text-2xl"
         >
